# SimpleAgent

./: .env.example  .gitignore  agent.py  main.py  pyproject.toml
mcp_server/: server.py
tools/: builtin_fs.py  builtin_web.py  mcp_bridge.py  registry.py
