[project]
name = "simpleagent"
version = "0.1.0"
description = "A from-scratch Python AI agent with tool calling, web search, and MCP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.50,<2.0",
    "python-dotenv>=1.0,<2.0",
    "tavily-python>=0.5,<1.0",
    "rich>=13.7,<15.0",
    "mcp>=1.2,<2.0",
]
